amend band description

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <img src="img/dirty-heads-logo.png" alt="Dirty Heads logo">
     <h1>Dirty Heads</h1>
-    <h2>Reggae band</h2>
+    <h2>multi-genre infused sound</h2>
     <img src="img/band.jpeg" alt="picture of Dirty Heads band members">
     <p>With a solid fan-base already in place, Dirty Heads are focusing their sights on something they’ve been edging towards for years: breaking the mainstream. “We want our fans to love it, because we love what we do and we want to keep doing it,” says Watson. “But this album for me, I cannot poke a hole in any of it. From front to back, it’s really so phenomenal. I’m so confident in it that I want it to take Dirty Heads from the band that we are in America, worldwide.”</p>
     <h4>Upcoming Shows</h4>
